@@ -95,7 +95,7 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/mbox">
     <_comment>Mailbox file</_comment>
-    <magic priority="50">
+    <magic priority="20">
       <match type="string" value="From " offset="0"/>
     </magic>
   </mime-type>
@@ -2548,6 +2548,15 @@ command to generate the output files.
     <glob pattern="*.vcf"/>
     <glob pattern="*.vct"/>
     <glob pattern="*.gcrd"/>
+  </mime-type>
+  <mime-type type="text/x-txt2tags">
+    <sub-class-of type="text/plain"/>
+    <_comment>txt2tags document</_comment>
+    <magic priority="60">
+      <match type="string" value="%!postproc" offset="0"/>
+      <match type="string" value="%!encoding" offset="0"/>
+    </magic>
+    <glob pattern="*.t2t"/>
   </mime-type>
   <mime-type type="text/x-vhdl">
     <sub-class-of type="text/plain"/>
